--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <button class="close-modal" id="closeAutoModal" title="Закрыть">&times;</button>
             <div class="modal-title">Автотесты (WIP) 🚧</div>
             <div class="modal-desc">
-                Smoke-suite на Java + Playwright уже пишется.<br> Публичный репо и Allure-отчёт будут в Q4-2024.<br> Следи за обновлениями — раздел скоро откроется.
+                Smoke-suite на Java + Playwright уже пишется.<br> Публичный репо и Allure-отчёт будут в 2025.<br> Следи за обновлениями — раздел скоро откроется.
             </div>
             <button class="back-btn" id="backFromAuto" type="button">Назад к портфолио</button>
         </div>
