--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="card">
                     <h3>Баг‑репорты</h3>
                     <p>Полные отчёты в стиле Jira: шаги, ожидание и&nbsp;факт, вложения, реальный пример работы.</p>
-                    <a class="btn" href="https://drive.google.com/your-bug-reports" target="_blank" rel="noopener">Смотреть</a>
+                    <a class="btn" href="https://drive.google.com/drive/folders/1UINzPiEBwxHPzI0mznCi1fFb_PUBx9qg?usp=sharing" target="_blank" rel="noopener">Смотреть</a>
                 </div>
                 <div class="card">
                     <h3>Чек‑лист и сценарии</h3>
