--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 
                 <div class="card">
                     <h3>Автотесты (WIP)</h3>
-                    <p>Smoke-suite на Java + Playwright: 30+ критичных сценариев, Allure-отчёты, автозапуск через GitHub Actions при каждом pull-request.</p>
+                    <p>Пишу smoke/regression на Python (Pytest + Playwright + Requests).
+В процессе: базовый набор UI + API, настройка фикстур, аллюр‑репорты.
+Публичный репозиторий и Allure-отчёт выложу в 2025 — раздел обновлю.</p>
                     <button class="btn" id="openAutoBtn" type="button">Смотреть автотесты</button>
                 </div>
 
@@ -148,7 +150,9 @@
             <button class="close-modal" id="closeAutoModal" title="Закрыть">&times;</button>
             <div class="modal-title">Автотесты (WIP) 🚧</div>
             <div class="modal-desc">
-                Smoke-suite на Java + Playwright уже пишется.<br> Публичный репо и Allure-отчёт будут в 2025.<br> Следи за обновлениями — раздел скоро откроется.
+               Smoke‑suite на Python + Playwright уже пишется.<br>
+Публичный репозиторий и Allure‑отчёт будут в 2025.<br>
+Следи за обновлениями — раздел скоро откроется.
             </div>
             <button class="back-btn" id="backFromAuto" type="button">Назад к портфолио</button>
         </div>
@@ -173,8 +177,8 @@
             <div class="modal-title">Обо мне</div>
 
             <div class="modal-desc">
-                <p><strong>QA Engineer с системным мышлением.</strong> 150 + найденных дефектов, ручное покрытие UI / API. Сейчас вывожу smoke-suite на Java + Playwright; цель — Senior за 2 года.</p>
-                <p>Личная сторона: отец школьника, бегу полумарафоны, обожаю научпоп. Сделал обучалку-тренажёр таблицы умножения для сына — тестирование пронизывает даже семейную жизнь 🙂</p>
+                <p><strong>QA Engineer с упором на Python. Нашёл 150+ дефектов, закрыл ручное покрытие ключевых UI/API сценариев и начал переносить их в автотесты (Pytest + Playwright). Хочу за 2 года вырасти до strong middle/senior</p>
+                <p>Вне работы: Занимаюсь спортом, бегу полумарафоны, пишу мелкие полезные тулзы (тренажёр умножения для сына) — люблю, когда польза ощутима. 🙂</p>
             </div>
 
             <div class="video-wrapper">
