--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="hero-info">
                     <h1>Системный QA Engineer</h1>
                     <h1>отвечаю за качество веб‑продуктов</h1>
-                    <p>Закрываю ручное тестирование (150 + кейсов, отчёты “дефект → риск”), параллельно осваиваю Java + Playwright и настраиваю CI-пайплайн для smoke-suite. Цель — выйти на уровень Senior за 2 года; ищу задачи, где важен результат, а не титул.</p>
+                    <p>Закрываю ручное тестирование (150 + кейсов, отчёты “дефект → риск”), параллельно автоматизирую на Python (Pytest + Playwright) и настраиваю CI-пайплайн для smoke-suite. Цель — выйти на уровень Senior за 2 года; ищу задачи, где важен результат, а не титул.</p>
                 </div>
             </div>
         </section>
