--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
   <!-- Skills -->
   <div class="skills-row">
-    <span class="badge" data-tip="Ручное тестирование веб‑приложений">Web Testing</span>
+    <span class="badge" data-tip="Ручное тестирование">Web Testing</span>
     <span class="badge" data-tip="Грамотное оформление баг‑репортов">Bug Reporting</span>
     <span class="badge" data-tip="КЭ • ГЗ • Pairwise • Decision Tables • FSM • Use Case">Test Design</span>
     <span class="badge" data-tip="Создание коллекций, окружения, валидация ответов, цепочки">Postman / API</span>
     <span class="badge" data-tip="Python + Pytest + Playwright: фикстуры, маркировки, smoke">Python Automation</span>
     <span class="badge" data-tip="Базовый синтаксис, DOM‑скрипты">JavaScript (basic)</span>
     <span class="badge" data-tip="SELECT, JOIN, агрегаты, фильтрация">SQL Queries</span>
-    <span class="badge" data-tip="Scrum: планинги, ретро, story points">Agile / Scrum</span>
+    <span class="badge" data-tip="Agile / Scrum">Agile / Scrum</span>
   </div>
 
   <!-- Portfolio -->
