--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="hero-info">
         <h1>Системный QA Engineer</h1>
         <p class="hero-sub">Отвечаю за качество веб‑продуктов</p>
-        <p>Закрываю ручное тестирование (150+ оформленных дефектов и кейсов, отчёты “дефект → риск”), параллельно автоматизирую на <strong>Python (Pytest + Playwright)</strong> и готовлю CI пайплайн для smoke‑suite. Цель — выйти на уровень strong middle / Senior за 2 года; ищу задачи, где важен результат, а не титул.</p>
+        <p>Что делаю для продукта: проверяю критичные Web-флоу (UI+API), быстро локализую сетевые/валид. дефекты через DevTools/Charles, подтверждаю данные в SQL. Даю понятные баг-репорты с рисками для бизнеса.
+Артефакты: Postman CRUD+негативы · DevTools кейсы · Charles моки · SQL-пруфы · чек-лист/кейсы/баги.</p>
       </div>
     </div>
   </section>
