--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
     <button class="close-modal" id="closeAboutModal" title="Закрыть">&times;</button>
     <div class="modal-title">Обо мне</div>
     <div class="modal-desc">
-      <p><strong>QA Engineer с упором на Python.</strong> 150+ дефектов, закрыто ручное покрытие ключевых UI/API сценариев, переношу их в автотесты (Pytest + Playwright). Цель: сильный middle / Senior за 2 года.</p>
-      <p>Спорт (полумарафоны) → дисциплина; делаю утилиты под реальные бытовые задачи (тренажёр умножения). Люблю превращать рутину в инструменты.</p>
+      <p><strong>Я занимаюсь ручным тестированием веб-UI и API и переношу самые важные проверки в автотесты на Pytest + Playwright. За время практики завёл 150+ багов. Нравится упрощать процессы: пишу небольшие скрипты на Python и превращаю повторяющиеся задачи в инструменты. Бегаю полумарафоны — это про спокойную, регулярную работу</p>
     </div>
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/your-intro"
