--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </div>
 </div>
 
-<!-- AUTOTESTS MODAL -->
+<!-- <!-- AUTOTESTS MODAL -->
 <div class="modal-bg" id="autoModal">
   <div class="modal">
     <button class="close-modal" id="closeAutoModal" title="Закрыть">&times;</button>
@@ -158,7 +158,7 @@
     </div>
     <button class="back-btn" id="backFromCicd" type="button">Назад к портфолио</button>
   </div>
-</div>
+</div> -->
 
 <!-- ABOUT MODAL -->
 <div class="modal-bg" id="aboutModal">
