--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
     <div class="modal-title">Pet Projects</div>
     <div class="modal-desc">Проекты для себя, ребёнка и практики: маленькие утилиты → живые задачи.</div>
     <ul class="pet-list">
-      <li class="pet-item">
+<!--       <li class="pet-item">
         <a href="https://github.com/yourgithub/multiplication-table-app" class="pet-link" target="_blank" rel="noopener">Тренажёр таблицы умножения</a>
         <span class="pet-desc">Учебное web‑приложение: таблица умножения + мотивация. Первый опыт структурирования JS.</span>
       </li>
       <li class="pet-item">
         <a href="https://github.com/yourgithub/salary-calc" class="pet-link" target="_blank" rel="noopener">Калькулятор зарплаты</a>
         <span class="pet-desc">Расчёт “грязные → чистые” + налоги. Практика логики и валидации.</span>
-      </li>
+      </li> -->
       <li class="pet-item">
         <a href="https://mikhailguzhov.github.io/ImgHunterApp/" class="pet-link" target="_blank" rel="noopener">Выбор и сортировка фото</a>
         <span class="pet-desc">Полуавтоматизация отбора фото (File API, UX тест). Первый опыт оптимизации рутины.</span>
@@ -168,12 +168,12 @@
     <div class="modal-desc">
       <p><strong>Я занимаюсь ручным тестированием веб-UI и API и переношу самые важные проверки в автотесты на Pytest + Playwright. За время практики завёл 150+ багов. Нравится упрощать процессы: пишу небольшие скрипты на Python и превращаю повторяющиеся задачи в инструменты. Бегаю полумарафоны — это про спокойную, регулярную работу</p>
     </div>
-    <div class="video-wrapper">
+<!--     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/your-intro"
               title="Видео-презентация — Mikhail QA"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-    </div>
+    </div> -->
     <button class="back-btn" id="backFromAbout" type="button">Назад к портфолио</button>
   </div>
 </div>
