--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
   </div>
 </div>
 
-<!-- <!-- AUTOTESTS MODAL -->
-<div class="modal-bg" id="autoModal">
+ <!-- AUTOTESTS MODAL -->
+<!-- <div class="modal-bg" id="autoModal">
   <div class="modal">
     <button class="close-modal" id="closeAutoModal" title="Закрыть">&times;</button>
     <div class="modal-title">Автотесты (WIP) 🚧</div>
@@ -145,10 +145,10 @@
     </div>
     <button class="back-btn" id="backFromAuto" type="button">Назад к портфолио</button>
   </div>
-</div>
+</div> -->
 
 <!-- CI/CD MODAL -->
-<div class="modal-bg" id="cicdModal">
+<!-- <div class="modal-bg" id="cicdModal">
   <div class="modal">
     <button class="close-modal" id="closeCicdModal" title="Закрыть">&times;</button>
     <div class="modal-title">CI/CD & Метрики 🚧</div>
@@ -158,7 +158,7 @@
     </div>
     <button class="back-btn" id="backFromCicd" type="button">Назад к портфолио</button>
   </div>
-</div> -->
+</div>  -->
 
 <!-- ABOUT MODAL -->
 <div class="modal-bg" id="aboutModal">
