--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       </div>
 
       <div class="card">
-        <h3>Обо мне + Видео</h3>
-        <p>60 секунд: кто я, чем отличаюсь, траектория роста.</p>
+        <h3>Обо мне</h3>
+        <p>Кто я, чем отличаюсь, траектория роста.</p>
         <button class="btn" id="openAboutBtn" type="button">Смотреть</button>
       </div>
 
@@ -73,17 +73,17 @@
         <button class="btn" id="openPetBtn" type="button">Смотреть проекты</button>
       </div>
 
-      <div class="card">
+<!--       <div class="card">
         <h3>Автотесты (WIP)</h3>
         <p>Python + Playwright: формирую smoke (auth, формы, негативы), Pytest структура (фикстуры, маркировки), план Allure & CI.</p>
         <button class="btn" id="openAutoBtn" type="button">Смотреть автотесты</button>
       </div>
-
-      <div class="card">
+ -->
+<!--       <div class="card">
         <h3>CI/CD & Метрики</h3>
         <p>План пайплайна: lint → unit → smoke → Lighthouse; публикация Allure history & Web Vitals.</p>
         <button class="btn" id="openCicdBtn" type="button">Смотреть пайплайн</button>
-      </div>
+      </div> -->
 
       <div class="card">
         <h3>Резюме (PDF)</h3>
