--- a/index.html
+++ b/index.html
@@ -72,6 +72,58 @@
         <p>Приложение для умножения, зарплатный калькулятор, инструмент сортировки фото.</p>
         <button class="btn" id="openPetBtn" type="button">Смотреть проекты</button>
       </div>
+      <!-- DevTools / Charles -->
+<div class="card">
+  <h3>DevTools & Charles кейсы</h3>
+  <p>Как ловлю и локализую дефекты: сеть, Storage, CORS, моки в Charles. 5–7 мини‑кейсов со скринами.</p>
+  <a class="btn" href="https://docs.google.com/your-devtools-charles" target="_blank" rel="noopener">Смотреть</a>
+</div>
+
+<!-- Postman -->
+<div class="card">
+  <h3>Postman: CRUD + негативы</h3>
+  <p>Коллекция, окружения, pre/tests‑скрипты, цепочки запросов. Экспорт в GitHub.</p>
+  <div class="resume-actions">
+    <a class="btn" href="https://www.postman.com/your-public-link" target="_blank" rel="noopener">Коллекция</a>
+    <a class="btn btn-outline" href="https://github.com/MikhailGuzhov/qa-artifacts/tree/main/postman" target="_blank" rel="noopener">JSON в GitHub</a>
+  </div>
+</div>
+
+<!-- SQL proofs -->
+<div class="card">
+  <h3>SQL‑пруфы</h3>
+  <p>JOIN/агрегаты для валидации данных: примеры запросов и результаты.</p>
+  <a class="btn" href="https://github.com/MikhailGuzhov/qa-artifacts/tree/main/sql" target="_blank" rel="noopener">Открыть</a>
+</div>
+
+<!-- RTM -->
+<div class="card">
+  <h3>Traceability mini (RTM)</h3>
+  <p>Связь «требование → сценарий → тест → баг»: прозрачность покрытия.</p>
+  <a class="btn" href="https://docs.google.com/your-rtm" target="_blank" rel="noopener">Таблица</a>
+</div>
+
+<!-- Impact & Регресс -->
+<div class="card">
+  <h3>Impact‑analysis & Регресс‑ядро</h3>
+  <p>Риск‑матрица, smoke‑набор, приоритеты на релизе. Что тестирую первым.</p>
+  <a class="btn" href="https://docs.google.com/your-impact" target="_blank" rel="noopener">Открыть</a>
+</div>
+
+<!-- A11y -->
+<div class="card">
+  <h3>Доступность (A11y)</h3>
+  <p>Мини‑аудит: контраст, alt, фокус. 3 примера до/после.</p>
+  <a class="btn" href="https://docs.google.com/your-a11y" target="_blank" rel="noopener">Посмотреть</a>
+</div>
+
+<!-- A/B plan -->
+<div class="card">
+  <h3>A/B‑план</h3>
+  <p>Гипотеза, метрики, дизайн эксперимента, критерий остановки.</p>
+  <a class="btn" href="https://docs.google.com/your-ab-plan" target="_blank" rel="noopener">Документ</a>
+</div>
+
 
 <!--       <div class="card">
         <h3>Автотесты (WIP)</h3>
