--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <button class="close-modal" id="closeAboutModal" title="Закрыть">&times;</button>
     <div class="modal-title">Обо мне</div>
     <div class="modal-desc">
-      <p><strong>Я занимаюсь ручным тестированием веб-UI и API и переношу самые важные проверки в автотесты на Pytest + Playwright. За время практики завёл 150+ багов. Нравится упрощать процессы: пишу небольшие скрипты на Python и превращаю повторяющиеся задачи в инструменты. Бегаю полумарафоны — это про спокойную, регулярную работу</p>
+      <p><strong>Я — начинающий QA-инженер. Умею искать баги и оформлять их так, чтобы разработчикам было понятно и быстро исправлять. Осваиваю автотесты на Python + Playwright, хочу развиваться в этом направлении. Учусь мобильному тестированию. Мне нравится разбираться в деталях и делать продукт лучше.</p>
     </div>
 <!--     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/your-intro"
