--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <!-- ADDED md:px-0 to ensure horizontal padding doesn't push elements out -->
                 <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-8 mt-6">
                     <!-- UPDATED: Telegram handle displayed as text -->
-                    <a href="https://t.me/daytrader067" target="_blank" class="inline-flex items-center justify-center px-6 py-3 text-base font-bold rounded-full shadow-lg text-white neon-button-cta">
+                    <a href="https://t.me/Mindforges" target="_blank" class="inline-flex items-center justify-center px-6 py-3 text-base font-bold rounded-full shadow-lg text-white neon-button-cta">
                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M19.98 5.768l-2.348 11.968c-.144.757-.547.95-1.22.618l-3.951-2.923-1.813 1.758c-.207.2-.375.35-.758.35h.008l.182-3.882 7.275-6.526c.325-.295-.072-.45-.505-.16l-8.914 5.516-3.834-1.196c-.74-.233-.762-.737.135-1.092l14.931-5.744c.64-.24 1.25.132.96 1.054z"/></svg>
                         @Mindforges
                     </a>
