--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             align-items: center;
             opacity: 1;
             transition: opacity 1.5s ease-out; /* Fade out transition */
+            text-align: center; /* Добавлено для идеального центрирования текста */
         }
         .loading-text {
             color: #06B6D4;
@@ -440,18 +441,18 @@
                         <span class="absolute top-1/2 left-4 transform -translate-y-1/2 text-sm font-bold text-white tracking-widest z-10 opacity-100">JUNIOR</span>
                     </div>
                     
-                    <!-- Stage Markers and Separators. Fixed positioning for text overlap. -->
-                    <!-- Middle (at 33.3%) -->
-                    <div class="stage-marker" style="left: 33.3%;">MIDDLE</div>
+                 <!-- Stage Markers and Separators. Fixed positioning for text overlap. -->
+                    <!-- Middle (at 33.3%) - Hidden on xs screens -->
+                    <div class="stage-marker hidden sm:block" style="left: 33.3%;">MIDDLE</div>
                     <div class="absolute inset-y-0 left-1/3 w-px bg-gray-600 opacity-50"></div>
 
-                    <!-- Senior (at 66.6%) -->
-                    <div class="stage-marker" style="left: 66.6%;">SENIOR</div>
+                    <!-- Senior (at 66.6%) - Hidden on xs screens -->
+                    <div class="stage-marker hidden sm:block" style="left: 66.6%;">SENIOR</div>
                     <div class="absolute inset-y-0 left-2/3 w-px bg-gray-600 opacity-50"></div>
 
-                    <!-- End goal marker (at 100%) -->
+                    <!-- End goal marker (at 100%) - Hidden on xs screens -->
                     <!-- Adjusted position to prevent overlap -->
-                    <div class="stage-marker text-cyan-400 opacity-90" style="right: 10px; transform: translateY(-50%);">QA AUTO. LEAD</div>
+                    <div class="stage-marker text-cyan-400 opacity-90 hidden sm:block" style="right: 10px; transform: translateY(-50%);">QA AUTO. LEAD</div>
 
                 </div>
 
