--- a/index.html
+++ b/index.html
@@ -441,18 +441,17 @@
                         <span class="absolute top-1/2 left-4 transform -translate-y-1/2 text-sm font-bold text-white tracking-widest z-10 opacity-100">JUNIOR</span>
                     </div>
                     
-                 <!-- Stage Markers and Separators. Fixed positioning for text overlap. -->
-                    <!-- Middle (at 33.3%) - Hidden on xs screens -->
-                    <div class="stage-marker hidden sm:block" style="left: 33.3%;">MIDDLE</div>
+             <!-- Stage Markers and Separators (ADAPTIVE FONT SIZE) -->
+                    <!-- Middle (at 33.3%) -->
+                    <div class="stage-marker text-xs sm:text-sm" style="left: 33.3%;">MIDDLE</div>
                     <div class="absolute inset-y-0 left-1/3 w-px bg-gray-600 opacity-50"></div>
 
-                    <!-- Senior (at 66.6%) - Hidden on xs screens -->
-                    <div class="stage-marker hidden sm:block" style="left: 66.6%;">SENIOR</div>
+                    <!-- Senior (at 66.6%) -->
+                    <div class="stage-marker text-xs sm:text-sm" style="left: 66.6%;">SENIOR</div>
                     <div class="absolute inset-y-0 left-2/3 w-px bg-gray-600 opacity-50"></div>
 
-                    <!-- End goal marker (at 100%) - Hidden on xs screens -->
-                    <!-- Adjusted position to prevent overlap -->
-                    <div class="stage-marker text-cyan-400 opacity-90 hidden sm:block" style="right: 10px; transform: translateY(-50%);">QA AUTO. LEAD</div>
+                    <!-- End goal marker (at 100%) - Hidden on small screens -->
+                    <div class="stage-marker text-cyan-400 opacity-90 hidden sm:block text-xs sm:text-sm" style="right: 10px; transform: translateY(-50%);">QA AUTO. LEAD</div>
 
                 </div>
 
