--- a/index.html
+++ b/index.html
@@ -487,13 +487,13 @@
                     <li class="border-l-4 border-neon-pink pl-4">
                         <p class="text-xl font-medium text-white">Senior Designer / IT-инженер</p>
                         <p class="text-sm text-gray-500 font-mono">DND GROUP | ЯНВАРЬ 2021 – НАСТОЯЩЕЕ ВРЕМЯ (4 года 10 месяцев)</p>
-                        <p class="text-gray-400 mt-2">**Ключевой опыт, релевантный QA:** Разработка двух рабочих приложений на **JavaScript** (автоматизация расчета ЗП, выбор фото). Курирование всех технических вопросов, связанных с дизайном, и обеспечение качества выполнения ТЗ. Наставничество.</p>
+                        <p class="text-gray-400 mt-2">Ключевой опыт, релевантный QA: Разработка двух рабочих приложений на JavaScript (автоматизация расчета ЗП, выбор фото). Курирование всех технических вопросов, связанных с дизайном, и обеспечение качества выполнения ТЗ. Наставничество.</p>
                     </li>
                     <!-- Technical Documentation Engineer (Border unified to Neon Pink for consistency) -->
                     <li class="border-l-4 border-neon-pink pl-4">
                         <p class="text-xl font-medium text-white">Инженер по технической документации</p>
-                        <p class="text-sm text-gray-500 font-mono">СМОЛЕНСКЭНЕРГО | МАЙ 2020 – ФЕВРАЛЬ 2021 (10 МЕСЯЦЕВ)</p>
-                        <p class="text-gray-400 mt-2">Создание тех. документации и схем (Visio). Контроль соблюдения ТУ и норм строительства. Заложил основу для **внимания к деталям и системного подхода** (фундамент для QA).</p>
+                        <p class="text-sm text-gray-500 font-mono">СМОЛЕНСКЭНЕРГО | МАЙ 2015 – ФЕВРАЛЬ 2021 (6 лет)</p>
+                        <p class="text-gray-400 mt-2">Создание тех. документации и схем (Visio). Контроль соблюдения ТУ и норм строительства. Заложил основу для внимания к деталям и системного подхода (фундамент для QA).</p>
                     </li>
                 </ul>
             </section>
